app/assets/stylesheets/app.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

.alert {
  margin-bottom: 0px;
}

body {
  padding-top: 60px;
  margin-left: 10px;
  margin-right: 10px;
}

.intro {
  position: relative;
  max-width: 100%;
}

.introcontent {
  position: absolute;
  top: 20%;
  left: 0;
  width: 100%;
}

.saucinlogo {
  position: absolute;
  top: 88%;
  left: 0;
  width: 100%;
}

.center {
  text-align: center;
  padding: 0px;
  h1 {
    margin-bottom: 10px;
  }
  .alreadylogged {
    font-size: small;
  }
}

/* header */

.container {
  border-bottom: 100px;
}

/*#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  &:hover {
    color: #aaa;
    text-decoration: none;
  }
}*/

#logo {
  margin-top: 5px;
  margin-bottom: 5px;
  float: left;
}
/* forms */

.checkbox {
  margin-top: 10px;
  margin-bottom: 10px;
  span {
    margin-left: 20px;
    font-weight: normal;
  }
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

tr[upvoted="true"] { 
  button.upvote-icon{
      color: green;
    }
}

